[gd_scene load_steps=4 format=3 uid="uid://db22aw6gkdqgb"]

[ext_resource type="Script" uid="uid://kyxkexhs23y5" path="res://Combat/CombatUI.gd" id="1_3pvg3"]
[ext_resource type="PackedScene" uid="uid://cdjyb4ulxs566" path="res://Combat/Portraits/Portrait.tscn" id="2_42nvl"]
[ext_resource type="PackedScene" uid="uid://dvkpwcipw4s24" path="res://Combat/Portraits/BossPortait.tscn" id="3_jbcvh"]

[node name="CombatUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3pvg3")

[node name="PartyPortraitTopLeft" parent="." instance=ExtResource("2_42nvl")]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 158.0
offset_bottom = 158.0

[node name="PartyPortraitBottomLeft" parent="." instance=ExtResource("2_42nvl")]
layout_mode = 0
offset_left = 30.0
offset_top = 450.0
offset_right = 158.0
offset_bottom = 578.0

[node name="PartyPortraitTopRight" parent="." instance=ExtResource("2_42nvl")]
layout_mode = 0
offset_left = 994.0
offset_top = 30.0
offset_right = 1122.0
offset_bottom = 158.0

[node name="PartyPortraitBottomRight" parent="." instance=ExtResource("2_42nvl")]
layout_mode = 0
offset_left = 994.0
offset_top = 450.0
offset_right = 1122.0
offset_bottom = 578.0

[node name="Portrait" parent="." instance=ExtResource("3_jbcvh")]
layout_mode = 0
offset_left = 366.0
offset_top = 72.0
offset_right = 763.0
offset_bottom = 469.0
